feat: add support for local LLM with configurable base URL and model

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,19 @@
 POSTGRES_URL="postgresql://postgres:password@localhost:5432/gitdiagram"
 NEXT_PUBLIC_API_DEV_URL=http://localhost:8000
 
+# OpenAI Configuration
 OPENAI_API_KEY=
+# For OpenAI, use: https://api.openai.com/v1
+# For Ollama, use: http://localhost:11434
+OPENAI_BASE_URL=https://api.openai.com/v1
 
+# Model Configuration
+MODEL=deepseek-r1
+
+# GitHub Configuration
 # OPTIONAL: providing your own GitHub PAT increases rate limits from 60/hr to 5000/hr to the GitHub API
 GITHUB_PAT=
 
-# old implementation
+# Legacy Configuration (not used)
 # OPENROUTER_API_KEY=
 # ANTHROPIC_API_KEY=
